--- a/vinduswadh/src/styles/styles.css
+++ b/vinduswadh/src/styles/styles.css
@@ -5,15 +5,16 @@
     margin: 20px 0px;
 }
 .img_container{
-    height: 250px;
+    height: 300px;
     width: max-content;
     margin-left: auto;
     margin-right: auto;
 }
 .img_container img{
     border-radius: 50%;
-    width: auto;
-    height: 180px;
+    width: 230px;
+    height: 230px;
+    margin-top: 15px;
     margin-bottom: 30px;
 }
 .details_content{
@@ -36,6 +37,7 @@
     padding: 10px 20px;
     border-radius: 15px 0px 15px 0px;
     position: relative;
+    cursor: pointer;
 }
 
 /*hot deals*/
@@ -48,20 +50,19 @@
     width: 100%;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 3px 10px 15px grey;
     margin: 20px 0px;
     background-color: #30748A;
 }
 .hot_img_container{
     width: max-content;
     margin-left: auto;
+    margin-right: 100px;
 }
 .hot_img_container img{
     border-radius: 50%;
     width: 300px;
     height: 300px;
     margin-bottom: 30px;
-    margin-right: 100px;
     position: relative;
     top: -40px;
 }
@@ -71,27 +72,24 @@
 }
 .content_details{
     position: relative;
-    top: -50px;
+    top: -100px;
     width: 60%;
-    display: flex;
-    flex-direction: column;
+    text-align: left;
+    margin-left: 10%;
 }
 .hot_item_name{
     color: white;
     font-size: 40px;
-    float: left;
-    margin: 0px 5vw;
+    margin: 0px ;
 }
 .hot_price{
     color: white;
-    margin: 0px 5vw;
+    margin: 0px;
     font-size: 35px;
-    float: left;
 }
 .itemoftheday{
-    float: left;
     color: white;
-    margin: 0px 5vw;
+    margin: 0px;
     font-size: 55px;
 }
 .hot_add{
@@ -102,7 +100,9 @@
     padding: 10px 20px;
     border-radius: 15px 0px 15px 0px;
     position: relative;
-    
+    bottom: -105px;
+    left: 10px;
+    cursor: pointer;
 }
 
 .all_items_container{
